remove hover on mobile menu, fix up our members alignment

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -53,6 +53,10 @@
       @media (max-width: $breakpoint-medium) {
         bottom: -1px;
       }
+
+      @media (max-width: $breakpoint-medium) {
+        display: none;
+      }
     }
 
     &:hover {
