--- a/src/scss/components/_C09-our-members.scss
+++ b/src/scss/components/_C09-our-members.scss
@@ -17,7 +17,6 @@
 
     a {
       height: 100%;
-      max-width: 275px;
       border: 1px solid #f2f2f2;
       min-height: 264px;
 
